span tags replaced by div tags

--- a/index.html
+++ b/index.html
@@ -24,29 +24,29 @@
     </figure>
 
     <section class="profile">
-      <span>
+      <div>
         <h3 class="profile__name">Victor Crest</h3>
         <p class="profile__age">26</p>
-      </span>
-      <span>
+      </div>
+      <div>
         <p class="profile__country">London</p>
-      </span>
+      </div>
     </section>
 
 
     <section class="stats">
-      <span>
+      <div>
         <h4 class="stats__info stats__info--strong">80K</h4>
         <p class="stats__info">Followers</p>
-      </span>
-      <span>
+      </div>
+      <div>
         <h4 class="stats__info stats__info--strong">803K</h4>
         <p class="stats__info">Likes</p>
-      </span>
-      <span>
+      </div>
+      <div>
         <h4 class="stats__info stats__info--strong">1.4K</h4>
         <p class="stats__info">Photos</p>
-      </span>
+      </div>
     </section>
 
   </main>
